- fixed issue with featured products on home page - cart images are now center aligned with each other - fixed issue with ‘all products’ link displaying properly - minor css tweaks

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -147,6 +147,7 @@
         
       img 
         display: block
+        margin: 0 auto
         max-height: 120px
         max-width: 120px
         width: auto
