--- a/source/stylesheets/contact.css.sass
+++ b/source/stylesheets/contact.css.sass
@@ -17,7 +17,7 @@
         text-align: center
         
         button
-          margin-left: 0px
+          margin-left: 0
     
     input, textarea  
       width: 100%
