--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -34,8 +34,8 @@ a:hover
 
 ul, ol
   list-style: none
-  margin: 0px
-  padding: 0px
+  margin: 0
+  padding: 0
 
 img 
   display: block
@@ -157,9 +157,9 @@ label
     -moz-appearance: none
     -webkit-appearance: none
     background: none
-    border: 0px
+    border: 0
     height: 100%
-    padding: 0px 47px 0px 10px
+    padding: 0 47px 0 10px
     width: 100%
     
     option
@@ -194,7 +194,7 @@ label
   color: $secondary-color
   font-size: 18px
   margin-bottom: 20px
-  padding: 0px
+  padding: 0
 
   li
     margin-bottom: 8px
@@ -241,10 +241,10 @@ label
   
 .flexslider
   background: none
-  border: 0px
-  border-radius: 0px
-  -webkit-border-radius: 0px
-  -moz-border-radius: 0px
+  border: 0
+  border-radius: 0
+  -webkit-border-radius: 0
+  -moz-border-radius: 0
   height: 100%
   margin-bottom: 0
   
