--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -58,7 +58,7 @@
           
           @media screen and (max-width: $break-large)
             max-width: 100%
-            margin-left: 0px
+            margin-left: 0
          
           h3 
             font-size: 1.8em
@@ -66,7 +66,7 @@
             
             @media screen and (max-width: $break-large)
               font-size: 1.7em
-              margin-bottom: 0px
+              margin-bottom: 0
             
             @media screen and (max-width: $break-medium)
               font-size: 1.4em
@@ -117,7 +117,7 @@
   @include flex-wrap(wrap)
         
 .pagination 
-  font-size: 20px
+  font-size: 1.2em
   font-weight: 900
   margin: 20px 0
   text-align: center
@@ -138,6 +138,6 @@
   width: 13px
   
 .products > p
-  font-size: 20px
+  font-size: 1.2em
   line-height: 20px
   text-align: center
